#38 Fix: Got rid of header title truncate, tab transition

--- a/style/components/tabs.css
+++ b/style/components/tabs.css
@@ -29,6 +29,7 @@
   align-items: center;
   gap: 0.5rem;
   position: relative;
+  transition: color var(--transition-duration);
 }
 
 .tabs .tab:hover {
